--- a/dir1/index.html
+++ b/dir1/index.html
@@ -6,7 +6,7 @@
 <!--
 <link rel="manifest" href="/manifest.json">
 -->
-<title>PWAsTest - Root</title>
+<title>PWAsTest - Sub Directory</title>
 <style>
 body {
   font-family: sans-serif;
@@ -34,7 +34,7 @@ html,
 <a href="/dir1">Sub Directory</a>
 <a href="/app1">App1</a>
 <a href="/app2">App2</a>
-<h1 class="title">This is Root page</h1>
+<h1 class="title">This is Sub Directory page</h1>
 </div>
 <script type="text/javascript">
 /*
