--- a/app1/index.html
+++ b/app1/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
 <!--
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/app1/manifest.json">
 -->
-<title>PWAsTest - Root</title>
+<title>PWAsTest - App1</title>
 <style>
 body {
   font-family: sans-serif;
@@ -34,12 +34,12 @@ html,
 <a href="/dir1">Sub Directory</a>
 <a href="/app1">App1</a>
 <a href="/app2">App2</a>
-<h1 class="title">This is Root page</h1>
+<h1 class="title">This is App1 page</h1>
 </div>
 <script type="text/javascript">
 /*
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js').then((registration) => {
+  navigator.serviceWorker.register('/app1/sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
