--- a/dir1/index.html
+++ b/dir1/index.html
@@ -30,10 +30,10 @@ html,
 </head>
 <body class="fullscreen">
 <div class="container">
-<a href="/">Root</a>
-<a href="/dir1">Sub Directory</a>
-<a href="/app1">App1</a>
-<a href="/app2">App2</a>
+<a href="/PWAsTest">Root</a>
+<a href="/PWAsTest/dir1">Sub Directory</a>
+<a href="/PWAsTest/app1">App1</a>
+<a href="/PWAsTest/app2">App2</a>
 <h1 class="title">This is Sub Directory page</h1>
 </div>
 <script type="text/javascript">
