--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/PWAsTest/manifest.json">
 <title>PWAsTest - Root</title>
 <style>
 body {
@@ -37,7 +37,7 @@ html,
 <script type="text/javascript">
 /*
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js').then((registration) => {
+  navigator.serviceWorker.register('/PWAsTest/sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
