--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
 <link rel="manifest" href="/PWAsTest/manifest.json">
+<link rel="icon" type="image/png" href="/PWAsTest/icons/icon-root.png" />
 <title>PWAsTest - Root</title>
 <style>
 body {
