--- a/app1/index.html
+++ b/app1/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-<link rel="manifest" href="/app1/manifest.json">
+<link rel="manifest" href="/PWAsTest/app1/manifest.json">
+<link rel="icon" type="image/png" href="/PWAsTest/icons/icon-app1.png">
 <title>PWAsTest - App1</title>
 <style>
 body {
@@ -32,18 +33,16 @@ html,
 <a href="/PWAsTest/dir1">Sub Directory</a>
 <a href="/PWAsTest/app1">App1</a>
 <a href="/PWAsTest/app2">App2</a>
-<h1 class="title">This is App2 page</h1>
+<h1 class="title">This is App1 page</h1>
 </div>
 <script type="text/javascript">
-/*
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/app1/sw.js').then((registration) => {
+  navigator.serviceWorker.register('/PWAsTest/app1/sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
   });
 }
-*/
 </script>
 </body>
 </html>
