--- a/app2/index.html
+++ b/app2/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-<link rel="manifest" href="/app2/manifest.json">
-<title>PWAsTest - App1</title>
+<link rel="manifest" href="/PWAsTest/app2/manifest.json">
+<link rel="icon" type="image/png" href="/PWAsTest/icons/icon-app2.png">
+<title>PWAsTest - App2</title>
 <style>
 body {
   font-family: sans-serif;
@@ -35,15 +36,13 @@ html,
 <h1 class="title">This is App2 page</h1>
 </div>
 <script type="text/javascript">
-/*
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/app2/sw.js').then((registration) => {
+  navigator.serviceWorker.register('/PWAsTest/app2/sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
   });
 }
-*/
 </script>
 </body>
 </html>
