--- a/dir1/index.html
+++ b/dir1/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/PWAsTest/manifest.json">
+<link rel="icon" type="image/png" href="/PWAsTest/icons/icon-root.png">
 <title>PWAsTest - Sub Directory</title>
 <style>
 body {
@@ -35,15 +36,13 @@ html,
 <h1 class="title">This is Sub Directory page</h1>
 </div>
 <script type="text/javascript">
-/*
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js').then((registration) => {
+  navigator.serviceWorker.register('/PWAsTest/sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
   });
 }
-*/
 </script>
 </body>
 </html>
