--- a/app2/index.html
+++ b/app2/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-<link rel="manifest" href="/PWAsTest/app2/manifest.json">
-<link rel="icon" type="image/png" href="/PWAsTest/icons/icon-app2.png">
+<link rel="manifest" href="./manifest.json">
+<link rel="icon" type="image/png" href="./icon.png">
+<link rel="apple-touch-icon" href="./icon.png">
 <title>PWAsTest - App2</title>
 <style>
 body {
@@ -27,17 +28,11 @@ html,
 }
 </style>
 </head>
-<body class="fullscreen">
-<div class="container">
-<a href="/PWAsTest">Root</a>
-<a href="/PWAsTest/dir1">Sub Directory</a>
-<a href="/PWAsTest/app1">App1</a>
-<a href="/PWAsTest/app2">App2</a>
 <h1 class="title">This is App2 page</h1>
 </div>
 <script type="text/javascript">
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/PWAsTest/app2/sw.js').then((registration) => {
+  navigator.serviceWorker.register('./sw.js').then((registration) => {
     console.log('ServiceWorker registration successful with scope: ', registration.scope);
   }).catch((err) => {
       console.log('ServiceWorker registration failed: ', err);
