--- a/app2/index.html
+++ b/app2/index.html
@@ -28,6 +28,8 @@ html,
 }
 </style>
 </head>
+<body class="fullscreen">
+<div class="container">
 <h1 class="title">This is App2 page</h1>
 </div>
 <script type="text/javascript">
