--- a/app2/index.html
+++ b/app2/index.html
@@ -100,10 +100,10 @@ index.html js start
 const _regSw = () => {
   return new Promise( async (resolve, reject) => {
     navigator.serviceWorker.register("./sw.js").then((registration) => {
-      console.log("ServiceWorker registration successful with scope: ", registration.scope);
+      console.log(_getDateTime() + "ServiceWorker registration successful with scope: ", registration.scope);
       resolve();
     }).catch((err) => {
-      console.log("ServiceWorker registration failed: ", err);
+      console.log(_getDateTime() + "ServiceWorker registration failed: ", err);
       reject();
     });
   })
