--- a/app2/index.html
+++ b/app2/index.html
@@ -100,10 +100,10 @@ index.html js start
 const _regSw = () => {
   return new Promise(async(resolve, reject) => {
     navigator.serviceWorker.register("./sw.js").then((registration) => {
-      console.log(_getDateTime() + "ServiceWorker registration successful with scope: ", registration.scope);
+      console.log(_getDateTime() + "|ServiceWorker registration successful with scope: ", registration.scope);
       resolve();
     }).catch((err) => {
-      console.log(_getDateTime() + "ServiceWorker registration failed: ", err);
+      console.log(_getDateTime() + "|ServiceWorker registration failed: ", err);
       reject();
     });
   })
@@ -111,7 +111,7 @@ const _regSw = () => {
 
 window.onload = () => {
   _regSw().then(async() => {
-    await new Promise(s => setTimeout(s, 1000))
+    await new Promise(s => setTimeout(s, 3000))
     _setCache("keyDom", "valueDom");
   });
 };
