--- a/app2/index.html
+++ b/app2/index.html
@@ -98,13 +98,13 @@ index.html js start
 
 
 const _regSw = () => {
-  _writeLog("[index.html]_regSw-Start");
+  _writeLog("[index.html]_regSw-start");
   return new Promise(async(resolve, reject) => {
     navigator.serviceWorker.register("./sw.js").then((registration) => {
-      _writeLog("[index.html]_regSw-Then(registration.scope) : " + registration.scope);
+      _writeLog("[index.html]_regSw-then(registration.scope) : " + registration.scope);
       resolve();
     }).catch((err) => {
-      _writeLog("[index.html]_regSw-Catch(err) : " + err);
+      _writeLog("[index.html]_regSw-catch(err) : " + err);
       reject();
     });
   })
