--- a/app2/index.html
+++ b/app2/index.html
@@ -127,6 +127,8 @@ window.onload = async() => {
     _setCache("keyDom2", "valueDom2");
   }
 
+  await _sleep(10000);
+
   _writeLog("[index.html]window.onload-_getCacheText(keyDom1) : " + _getCacheText("keyDom1"));
   _writeLog("[index.html]window.onload-_getCacheText(keyDom2) : " + _getCacheText("keyDom2"));
   _writeLog("[index.html]window.onload-_getCacheText(keySw1) : " + _getCacheText("keySw1"));
