--- a/app2/index.html
+++ b/app2/index.html
@@ -127,7 +127,7 @@ window.onload = async() => {
 };
 
 
-_writeLog("[index.html]LastLine");
+//_writeLog("[index.html]LastLine");
 /*
 ****************************************
 index.html js end
