--- a/app2/index.html
+++ b/app2/index.html
@@ -86,6 +86,9 @@ const touchArea = document.body;
 const HANDLE_START = ["touchstart", "mousedown"];
 for (let handleStart of HANDLE_START) {
   touchArea.addEventListener(handleStart, (e) => {
+    for ( const touch of event.touches){
+      _writeLog("[index.html]touch/click X:" + touch.clientX + ", Y:" + touch.clientY);
+    }
     _dispLog();
   });
 }
