--- a/app2/index.html
+++ b/app2/index.html
@@ -78,12 +78,7 @@ log.page
 const _dispLog = async() => {
   _writeLog("[index.html]_dispLog-start");
   let textLog = await _getCacheText("log.txt");
-
-
-  _writeLog("[index.html]_dispLog(textLog) : " + textLog);
-
-
-  let htmlLog = textLog.replace("\n", "<br>");
+  let htmlLog = textLog.replaceAll("\n", "<br>");
   document.getElementById("_system-disp-element").innerHTML = htmlLog;
   _writeLog("[index.html]_dispLog-end");
 }
