--- a/app3/index.html
+++ b/app3/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 </head>
 <body width="0px" height="0px" style="margin:0"></body>
-<script defer src="_.js"></script>
+<script defer src="./_.js"></script>
 <script>
 window.onload=()=>{
   _.log(_)
