--- a/app3/index.html
+++ b/app3/index.html
@@ -6,14 +6,14 @@
   <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 </head>
 <body width="0px" height="0px" style="margin:0"></body>
-<script defer src="./_.js"></script>
+<script defer src="./app.js"></script>
 <script>
 window.onload=()=>{
-  _.log(_)
-  _.log("test1")
-  _.viewer()
-  _(true)
-  _.viewer()
+  app.log(_)
+  app.log("test1")
+  app.viewer()
+  app(true)
+  app.viewer()
 }
 </script>
 </html>
