--- a/app3/index.html
+++ b/app3/index.html
@@ -9,7 +9,8 @@
 <script defer src="./app.js"></script>
 <script>
 window.onload=()=>{
-  app(true)
+  //app(true)
+  app()
   app.log(app)
   app.log("test1")
   app.viewer()
