--- a/app3/index.html
+++ b/app3/index.html
@@ -12,11 +12,13 @@
 <script defer src="./app.js"></script>
 <script>
 window.onload=()=>{
-  app(true)
+  //app({pwa: true, hide: true})
+  //app({hide: true})
+  app({pwa: true})
   //app()
-  app.log(app)
-  app.log("test1")
-  app.viewer()
+  //app.pwa()
+  //app.hide()
+  app.log("test1 from index.html")
 }
 </script>
 </html>
