--- a/app3/index.html
+++ b/app3/index.html
@@ -14,7 +14,7 @@
 window.onload=()=>{
   //app({hide: true, cache: true, pwa: true})
   //app({hide: true})
-  app({cache: true})
+  //app({cache: true})
 
 /*
   app.log(app.getCacheItems())
@@ -28,6 +28,7 @@ window.onload=()=>{
 */
 
   //app()
+  app({cache: true, pwa: true})
 
   app.log("test1 from index.html")
 }
