--- a/app3/index.html
+++ b/app3/index.html
@@ -61,9 +61,15 @@ window.onload=()=>{
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
       }
       #show {
         background: #66bbbb;
+        transition: background-color 1s;
+      }
+      #show.flash{
+        background: #99eeee;
+        transition-duration: 0s;
       }
       #touch {
         background: #eeee66;
@@ -72,6 +78,19 @@ window.onload=()=>{
         width: 30%;
         min-width: 256px;
         height: auto;
+      }
+      .poyooon {
+        animation: poyooon 0.9s linear 0s 1;
+      }
+      @keyframes poyooon {
+        0%   { transform: scale(1.0, 1.0) translate(0%, 0%); }
+        10%  { transform: scale(1.1, 0.9) translate(0%, 5%); }
+        40%  { transform: scale(1.2, 0.8) translate(0%, 15%); }
+        50%  { transform: scale(1.0, 1.0) translate(0%, 0%); }
+        60%  { transform: scale(0.9, 1.2) translate(0%, -100%); }
+        75%  { transform: scale(0.9, 1.2) translate(0%, -20%); }
+        85%  { transform: scale(1.2, 0.8) translate(0%, 15%); }
+        100% { transform: scale(1.0, 1.0) translate(0%, 0%); }
       }
     </style>
     <div id="pos">
@@ -87,9 +106,36 @@ window.onload=()=>{
     app.sync(`setCache("${cacheKey}", ${JSON.stringify(cacheObj)})`)
   }
 
+  const msaddclass=(q, c, ms)=>{
+    const e = document.querySelector(q);
+    e.classList.add(c);
+    setTimeout(()=>{
+      e.classList.remove(c);
+    }, ms);
+  }
+  let isTimer = false
+  document.getElementById("show").addEventListener("click",()=>{
+    if (!isTimer && varCount > 0) {
+      isTimer = true
+      const timerid = setInterval(()=>{
+        varCount = varCount - 1
+        view()
+        if (varCount <= 0) {
+          isTimer = false
+          clearInterval(timerid)
+          msaddclass("#show", "flash", 50)
+          msaddclass("#touch img", "poyooon", 1000)
+        }
+      }, 1000);
+    }
+  });
+
   document.getElementById("touch").addEventListener("click",()=>{
-    varCount = varCount + 1
-    view()
+    if (!isTimer) {
+      msaddclass("#touch img", "poyooon", 1000)
+      varCount = varCount + 1
+      view()
+    }
   });
 
   app.getCache(cacheKey).then(res=>{
