--- a/app3/index.html
+++ b/app3/index.html
@@ -79,6 +79,38 @@ window.onload=()=>{
         min-width: 256px;
         height: auto;
       }
+
+.purun {
+  animation: purun 0.8s linear 0s 1;
+}
+
+@keyframes purun {
+  0%   { transform: scale(1.0, 1.0) translate(0%, 0%); }
+  15%  { transform: scale(0.9, 0.9) translate(0%, 5%); }
+  30%  { transform: scale(1.3, 0.8) translate(0%, 10%); }
+  50%  { transform: scale(0.8, 1.3) translate(0%, -10%); }
+  70%  { transform: scale(1.1, 0.9) translate(0%, 5%); }
+  100% { transform: scale(1.0, 1.0) translate(0%, 0%); }
+}
+
+.korokoro {
+  animation: korokoro 2.5s linear 0s 1;
+}
+
+@keyframes korokoro {
+  0%   { transform: translate(0%, 0%); }
+  5%   { transform: translate(10%, 0%) rotate(10deg); }
+  25%  { transform: translate(20%, 0%) rotate(20deg); }
+  30%  { transform: translate(-10%, 0%) rotate(-10deg); }
+  35%  { transform: translate(-15%, 0%) rotate(-15deg); }
+  45%  { transform: translate(10%, 0%) rotate(10deg); }
+  50%  { transform: translate(15%, 0%) rotate(15deg); }
+  60%  { transform: translate(-5%, 0%) rotate(-5deg); }
+  65%  { transform: translate(-7%, 0%) rotate(-7deg); }
+  75%  { transform: translate(0%, 0%) rotate(0deg); }
+  100% { transform: translate(0%, 0%) rotate(0deg); }
+}
+
       .poyooon {
         animation: poyooon 0.9s linear 0s 1;
       }
@@ -112,19 +144,28 @@ window.onload=()=>{
     setTimeout(()=>{
       e.classList.remove(c);
     }, ms);
+    return e
   }
   let isTimer = false
   document.getElementById("show").addEventListener("click",()=>{
     if (!isTimer && varCount > 0) {
       isTimer = true
-      const timerid = setInterval(()=>{
+      const timerid1 = setInterval(()=>{
+        msaddclass("#touch img", "korokoro", 2500)
+        if (varCount <= 0) {
+          clearInterval(timerid1)
+        }
+      }, 2600);
+      const timerid2 = setInterval(()=>{
         varCount = varCount - 1
         view()
         if (varCount <= 0) {
+          document.querySelector("#touch img").classList.remove("korokoro");
+          clearInterval(timerid1)
+          clearInterval(timerid2)
           isTimer = false
-          clearInterval(timerid)
           msaddclass("#show", "flash", 50)
-          msaddclass("#touch img", "poyooon", 1000)
+          msaddclass("#touch img", "poyooon", 900)
         }
       }, 1000);
     }
@@ -132,7 +173,7 @@ window.onload=()=>{
 
   document.getElementById("touch").addEventListener("click",()=>{
     if (!isTimer) {
-      msaddclass("#touch img", "poyooon", 1000)
+      msaddclass("#touch img", "purun", 800)
       varCount = varCount + 1
       view()
     }
