--- a/app3/index.html
+++ b/app3/index.html
@@ -42,7 +42,7 @@ window.onload=()=>{
         text-size-adjust: 100%;
         -webkit-text-size-adjust: 100%;
         position: fixed;
-        top: 15%;
+        top: 20%;
         left: 10%;
       }
       .area {
@@ -55,7 +55,7 @@ window.onload=()=>{
         cursor: pointer;
       }
       #name {
-        font-size: 5rem;
+        font-size: 4rem;
         width: 80vw;
         height: 5vh;
         display: flex;
@@ -128,14 +128,14 @@ window.onload=()=>{
     <!-- <button id="send">send</button> -->
     <!-- <button id="recv">send</button> -->
     <div id="pos">
-      <div id="name">user1</div>
+      <div id="name"></div>
       <div id="show" class="area">0</div>
       <div id="touch" class="area"><img src="./icon.png"></div>
     </div>
   `)
 
   const postURL  = "https://script.google.com/macros/s/AKfycbztpS68-LlWTOIcb-nF_rNwwBUY--M8x-J7O-Am_D8edkTUOndHAZ22oiyVwN36BB2_-Q/exec"
-  let postName = "user1"
+  let postName = "ほげ１"
   const cacheKey = "index.html.cache"
   let cacheObj = {
     "count": 0
@@ -158,6 +158,7 @@ window.onload=()=>{
     return e
   }
 
+  document.getElementById("name").innerHTML=postName
   document.getElementById("name").addEventListener("click",()=>{
     let res = prompt("name?", postName)
     postName=(res)?res:postName
@@ -215,7 +216,7 @@ window.onload=()=>{
 
   const getCachePost=()=>{
     app.log(`getCachePost: start`)
-    document.getElementById("show").innerHTML=`<small>loading...</small>`
+    document.getElementById("show").innerHTML=`<font size="2">loading...</font>`
     app.getCache(cacheKey).then(res=>{
       if (res) {
         cacheObj=res
