--- a/app3/index.html
+++ b/app3/index.html
@@ -135,7 +135,7 @@ window.onload=()=>{
   `)
 
   const postURL  = "https://script.google.com/macros/s/AKfycbztpS68-LlWTOIcb-nF_rNwwBUY--M8x-J7O-Am_D8edkTUOndHAZ22oiyVwN36BB2_-Q/exec"
-  let postName = "ほげ１"
+  let postName = "user1"
   const cacheKey = "index.html.cache"
   let cacheObj = {
     "count": 0
